MyFirstIDEProject/src/objects/Review__c.object
<CustomObject>
    <description>Represents an interviewer&apos;s assessment of a particular candidate</description>
    <fields>
        <fullName>Assessment__c</fullName>
        <description>Describes the review about candidate for a given job position</description>
        <inlineHelpText>Describes the review about candidate for a given job position</inlineHelpText>
        <label>Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interview_Candidate__c</fullName>
        <formula>HYPERLINK( Job_Application__r.Interview_Candidate__r.Id ,  Job_Application__r.Interview_Candidate__r.First_Name__c   &amp;  &quot; &quot;  &amp;  Job_Application__r.Interview_Candidate__r.Last_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interview Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <description>Stores the job application reference about which the review is being displayed</description>
        <inlineHelpText>Stores the job application reference about which the review is being displayed</inlineHelpText>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Position__c</fullName>
        <formula>Job_Application__r.Job_Position__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <inlineHelpText>Enter 1-5 rating of the candidate</inlineHelpText>
        <label>Rating</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Review</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rating_Scale_Rule</fullName>
        <active>true</active>
        <description>Rating must be between 1 and 5</description>
        <errorConditionFormula>OR( Rating__c  &lt; 1,  Rating__c  &gt; 5 )</errorConditionFormula>
        <errorDisplayField>Rating__c</errorDisplayField>
        <errorMessage>Rating must be between 1 and 5</errorMessage>
    </validationRules>
</CustomObject>